2007-10-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/eventfd_read.c (eventfd_read): Use
	__read not read.
	* sysdeps/unix/sysv/linux/eventfd_write.c (eventfd_write): Use
	__write not write.

2007-10-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #181]
	* locale/C-time.c: Set week_1stday data to 19971201.
	* locale/programs/ld-time.c (time_finish): Default for
	first_workday is Monday.

	[BZ #2633]
	* wcsmbs/wchar.h: Move many C99 functions into std namespace.

	[BZ #5103]
	* posix/glob.c (glob): Recognize patterns starting \/.
	* posix/tst-gnuglob.c (find_file): Handle absolute path names.
	(main): Add test for pattern starting \/.

	* misc/error.h: Use __const instead of const.
	* misc/bits/error.h: Likewise.

2007-10-07  Andreas Jaeger  <aj@suse.de>

	* include/bits/error.h: New file.

	* misc/bits/error.h (error_at_line): Fix prototype.

2007-10-06  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3924]
	* sysdeps/i386/dl-trampoline.S (_dl_runtime_profile): Fix a few
	more little bugs in creating the stack frame when pltexit has to
	be called.

	* nscd/nscd_helper.c (__nscd_cache_search): Prevent endless loops.
	* nscd/connections.c (verify_persistent_db): Recognize circular lists.

	[BZ #4407]
	* sysdeps/ieee754/dbl-64/e_lgamma_r.c: Fix *signgamp for -0.0.
	* sysdeps/ieee754/flt-32/e_lgammaf_r.c: Likewise.
	* sysdeps/ieee754/ldbl-96/e_lgammal_r.c: Likewise.
	* math/libm-test.inc: Add test for this case.

	[BZ #5010]
	* sunrpc/svc.c (struct svc_callout): Add sc_mapped element.
	(svc_register): Initialize sc_mapped.  Set to TRUE if call to
	map service succeeded.
	(svc_is_mapped): New function.
	(svc_unregister): Use it before trying to unmap service.

2007-10-05  Ulrich Drepper  <drepper@redhat.com>

	* timezone/zic.c: Update from tzcode2007h.

	[BZ #5063]
	* timezone/africa: Update from tzdata2007h.
	* timezone/antarctica: Likewise.
	* timezone/asia: Likewise.
	* timezone/australasia: Likewise.
	* timezone/europe: Likewise.