@@ -76,6 +76,8 @@ END LC_CTYPE
 
 LC_COLLATE
 
+define DIACRIT_FORWARD
+
 % Copy the template from ISO/IEC 14651
 copy "iso14651_t1"
 
@@ -118,7 +120,6 @@ day	"<U0053><U006F><U006E><U006E><U0074><U0061><U0067>";/
 	"<U0044><U006F><U006E><U006E><U0065><U0072><U0073><U0074><U0061><U0067>";/
 	"<U0046><U0072><U0065><U0069><U0074><U0061><U0067>";/
 	"<U0053><U0061><U006D><U0073><U0074><U0061><U0067>"
-week    7;19971201;4
 abmon	"<U004A><U0061><U006E>";"<U0046><U0065><U0062>";/
 	"<U004D><U00E4><U0072>";"<U0041><U0070><U0072>";/
 	"<U004D><U0061><U0069>";"<U004A><U0075><U006E>";/
@@ -153,6 +154,10 @@ t_fmt_ampm ""
 date_fmt	"<U0025><U0061><U0020><U0025><U002D><U0064><U002E><U0020>/
 <U0025><U0062><U0020><U0025><U0048><U003A><U0025><U004D><U003A><U0025><U0053>/
 <U0020><U0025><U005A><U0020><U0025><U0059>"
+
+week    7;19971201;4
+first_weekday 1
+first_workday 1
 END LC_TIME
 
 LC_MESSAGES
