@@ -1,3 +1,8 @@
+2007-10-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* locales/de_DE: Set first week day to Monday.
+	* locales/fr_FR: Likewise.
+
 2007-10-07  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #73]
